[package]
name = "tileline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml="0.28"
colorsys = "0.6.7"
builder-pattern= "0.4"
chrono = {version = "0.4.24" , optional =true}


[features]
year_line=["dep:chrono"]
