[package]
name = "tileline"
version = "0.1.0"
edition = "2021"
authors = ["Tglman <tglman@tglman.com>"]
license = "MIT/Apache-2.0"
description= "Simple library to generate SVG block graph"
documentation = "https://docs.rs/tileline/"
readme = "README.md"
exclude = ["site"]

[dependencies]
quick-xml="0.28"
colorsys = "0.6.7"
builder-pattern= "0.4"
chrono = {version = "0.4.24" , optional =true}


[features]
year_line=["dep:chrono"]
