[package]
name = "tileline"
version = "0.1.0"
edition = "2021"
authors = ["Tglman <tglman@tglman.com>"]
license = "MIT OR Apache-2.0"
description= "Simple library to generate SVG block graph"
documentation = "https://docs.rs/tileline/"
repository = "https://github.com/tglman/tileline"
homepage = "https://tileline.tglman.org"
keywords = ["svg", "events", "tileline"]
category = ["visualization"]
readme = "README.md"
exclude = ["site"]

[badges]
github = { repository = "tglman/tileline", branch = "master" }


[dependencies]
quick-xml="0.28"
colorsys = "0.6.7"
builder-pattern= "0.4"
chrono = {version = "0.4.24" , optional =true}


[features]
year_line=["dep:chrono"]

[[example]]
name = "rainbow_year"
required-features = ["year_line"]
crate-type=["bin"]
